[package]
name = "nimbus_experiments"
version = "0.1.0"
authors = ["Tarik Eshaq <teshaq@mozilla.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
url = "2.1"
serde = { version = "1", features = ["rc"] }
serde_derive = "1"
serde_json = "1"
anyhow = "1.0"
rand = "0.7"
log = "0.4"
viaduct = { git = "https://github.com/mozilla/application-services" }
ffi-support = "0.4"
thiserror = "1"
rkv = "0.10"
lazy_static = "1.4"
uuid = { version = "0.8", features = ["serde", "v4"]}
prost = "0.6"

[build-dependencies]
prost-build = { version = "0.6" }

[lib]
name = "nimbus_experiments"
crate-type = ["lib"]

[dev-dependencies]
viaduct-reqwest = { git = "https://github.com/mozilla/application-services" }

