[package]
name = "experiments-ffi"
version = "0.1.0"
authors = ["The Firefox Sync Developers <sync-team@mozilla.com>"]
edition = "2018"
license = "MPL-2.0"

[lib]
name = "experiments_ffi"
crate-type = ["lib"]

[dependencies]
lazy_static = "1.4.0"
log = "0.4"
ffi-support = "0.4"
serde_json = "1"
anyhow = "1"
# This now references a local path on my own device. If we end up actually using viaduct,
# We should maybe publish it as crate (similar to ffi-support)
# This use case however is a hack, and we will probably do something else
viaduct = { path = "../../application-services/components/viaduct" }

[dependencies.experiments]
path = ".."
